新しいAPIに対応させた